--- a/profile-style.css
+++ b/profile-style.css
@@ -27,3 +27,50 @@ button.navbar-toggle.pull-left {
         box-shadow: inset 0 1px 0 rgba(255,255,255,.1),0 0px 0 rgba(255,255,255,.1);
     }
 }
+
+.bckgrnd-photo img {
+    width: 100%;
+    max-height: 200px;
+}
+
+.ProfileNav-item {
+    display: inline-block;
+    text-align: left;
+}
+
+li {
+    text-align: inherit;
+}
+
+.ProfileNav-list {
+    color: white;
+}
+
+.ProfileNav-label {
+    font-weight: bold;
+}
+
+main nav {
+    width: 90%;
+    margin-left: 15%;
+    display: inline-block;
+    margin-top: 8%;
+}
+
+.ProfilePhoto {
+    display: inline-block;
+    position: absolute;
+    border-radius: 50%;
+}
+
+.ProfileAvatar-image {
+    margin-top: 8px;
+    border-radius: 50%;
+    height: 100%;
+    position: static;
+    width: 100%;
+}
+
+main {
+    background-color: azure;
+}
