--- a/profile-style-FTry.css
+++ b/profile-style-FTry.css
@@ -30,20 +30,17 @@ button.navbar-toggle.pull-left {
 
 .bckgrnd-photo img {
     width: 100%;
-    max-height: 200px;
+    height: 35%;
+    position: absolute;
 }
 
 .ProfileNav-item {
     display: inline-block;
-    text-align: left;
-}
-
-li {
-    text-align: inherit;
 }
 
 .ProfileNav-list {
     color: white;
+    padding-left: 15%;
 }
 
 .ProfileNav-label {
@@ -51,28 +48,27 @@ li {
 }
 
 main nav {
-    width: 90%;
-    margin-left: 15%;
+    width: 100%;
     display: inline-block;
-    margin-top: 8%;
+    margin-top: 10%;
+    margin-right: 15%;
 }
 
 .ProfilePhoto {
     display: inline-block;
     position: absolute;
     border-radius: 50%;
+    position: absolute;
+    z-index: 1;
 }
 
 .ProfileAvatar-image {
-    margin-top: 8px;
+    margin-top: 15%;
     border-radius: 50%;
     height: 100%;
     position: static;
     width: 100%;
-}
-
-main {
-    background-color: azure;
+    padding: 20px 20px;
 }
 
 .Grid-cell {
@@ -80,22 +76,33 @@ main {
 }
 
 .ProfileMiddle-HeaderItems {
-    position: static;
     display: inline-block;
 }
 
 .navbar-content {
-    padding-left: 5%;
+    padding-left: 20%;
 }
 
 .Grid {
     margin-left: 5px;
 }
 
-.ProfileMiddle-Header h2 {
-    margin-bottom: 70px;
+.ProfileMiddle-Header h3 {
+    margin-bottom: 75px;
 }
 
 .ProfileMiddle-HeaderItems {
-    padding: 15px 15px 12px;
+    padding: 7px 7px 12px;
+}
+
+main {
+    margin-top: 5%;
+}
+
+.ProfilePhoto {
+    margin-left: 10%;
+}
+
+.Page-container {
+    margin-left: 11.5%;
 }
